hphp/test/zend/good/ext/soap/tests/soap12/config.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('soap')) die('skip soap extension not available');
}
