hphp/test/zend/bad/ext/reflection/tests/016.php.skipif
<?php
extension_loaded('reflection') or die('skip'); 
if (!extension_loaded("xml")) {
  die('skip xml extension not available');
}
?>